core/src/main/test/templates/error/while1.zs
jhjklk;asdf
akjaskfj;asjdf jaskdfj alks
kasdldfkj 
asdfalkjsdlfj
[#if foo]
	[#foreach bar in bib]
		[#while bbb aaa]
			ppp
		[/#while]
	[/#foreach]
[/#if]